@@ -1,12 +1,9 @@
 package com.unideb.qsa.config.resolver.datasource.configdefinition;
 
-import java.util.Collection;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
-
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 import com.unideb.qsa.config.resolver.datasource.configpack.ConfigPackSource;
 import com.unideb.qsa.domain.context.ConfigDefinition;
@@ -17,38 +14,39 @@ import com.unideb.qsa.domain.context.Qualifier;
 /**
  * Resolves {@link ConfigDefinition}.
  */
-@Component
 public class ConfigDefinitionSource {
 
     private static final String DEFAULT_CONFIG_QUALIFIER = "name";
     private static final String EMPTY_QUALIFIER = "";
 
-    @Autowired
-    private ConfigPackSource compositeConfigPackSource;
+    private final ConfigPackSource compositeConfigPackSource;
+
+    public ConfigDefinitionSource(ConfigPackSource compositeConfigPackSource) {
+        this.compositeConfigPackSource = compositeConfigPackSource;
+    }
 
     /**
      * Resolves {@link ConfigDefinition} based on the config name and qualifier.
-     *
      * @param configName config name
      * @param qualifier  condition
      * @return resolved {@link ConfigDefinition}s
      */
-    public Collection<ConfigDefinition> getConfigDefinitions(String configName, Qualifier qualifier) {
-        ImmutableList.Builder<ConfigDefinition> configDefinitions = new ImmutableList.Builder<>();
-        compositeConfigPackSource
+    public List<ConfigDefinition> getConfigDefinitions(String configName, Qualifier qualifier) {
+        return compositeConfigPackSource
                 .getConfigPacks()
                 .stream()
                 .map(configPack -> getConfigDefinitions(configPack, configName, qualifier))
-                .forEach(configDefinitions::addAll);
-        return configDefinitions.build();
+                .flatMap(List::stream)
+                .collect(Collectors.toList());
     }
 
-    private Collection<ConfigDefinition> getConfigDefinitions(ConfigPack configPack, String configName, Qualifier qualifier) {
-        ImmutableList.Builder<ConfigDefinition> configDefinitionBuilder = new ImmutableList.Builder<>();
+    private List<ConfigDefinition> getConfigDefinitions(ConfigPack configPack, String configName, Qualifier qualifier) {
         Qualifier updatedQualifier = createQualifierWithDefaultValue(qualifier);
-        addConfigDefinitionIfExists(configPack, configName, updatedQualifier, configDefinitionBuilder);
-        addGlobalConfigDefinitionIfExists(configPack, configName, configDefinitionBuilder);
-        return configDefinitionBuilder.build();
+        return List.of(resolveConfigDefinitions(configPack, configName, updatedQualifier),
+                resolveGlobalConfigDefinition(configPack, configName))
+                   .stream()
+                   .flatMap(Optional::stream)
+                   .collect(Collectors.toList());
     }
 
     private Qualifier createQualifierWithDefaultValue(Qualifier givenQualifier) {
@@ -62,22 +60,21 @@ public class ConfigDefinitionSource {
         return result;
     }
 
-    private void addConfigDefinitionIfExists(ConfigPack configPack, String configName, Qualifier qualifier, ImmutableList.Builder<ConfigDefinition> builder) {
-        addConfigDefinition(builder, configPack, configName, ImmutableMap.of(DEFAULT_CONFIG_QUALIFIER, qualifier.get(DEFAULT_CONFIG_QUALIFIER)));
+    private Optional<ConfigDefinition> resolveConfigDefinitions(ConfigPack configPack, String configName, Qualifier qualifier) {
+        return resolveConfigDefinition(configPack, configName, Map.of(DEFAULT_CONFIG_QUALIFIER, qualifier.get(DEFAULT_CONFIG_QUALIFIER)));
     }
 
-    private void addGlobalConfigDefinitionIfExists(ConfigPack configPack, String configName, ImmutableList.Builder<ConfigDefinition> builder) {
-        addConfigDefinition(builder, configPack, configName, ImmutableMap.of());
+    private Optional<ConfigDefinition> resolveGlobalConfigDefinition(ConfigPack configPack, String configName) {
+        return resolveConfigDefinition(configPack, configName, Map.of());
     }
 
-    private void addConfigDefinition(ImmutableList.Builder<ConfigDefinition> builder, ConfigPack configPack, String configName,
-            ImmutableMap<String, String> qualifiers) {
+    private Optional<ConfigDefinition> resolveConfigDefinition(ConfigPack configPack, String configName, Map<String, String> qualifiers) {
         ConfigKey configKey = new ConfigKey(configName, qualifiers);
-        configPack.getConfigKeyToConfigDefinitionMap()
-                  .entrySet()
-                  .stream()
-                  .filter(entry -> entry.getKey().equals(configKey))
-                  .findFirst()
-                  .ifPresent(entry -> builder.add(entry.getValue()));
+        return configPack.getConfigKeyToConfigDefinitionMap()
+                         .entrySet()
+                         .stream()
+                         .filter(entry -> entry.getKey().equals(configKey))
+                         .findFirst()
+                         .map(Map.Entry::getValue);
     }
 }
